; ModuleID = '/home/carl/AnghaBench/mpv/player/extr_client.c_free_prop_set_req.c'
source_filename = "/home/carl/AnghaBench/mpv/player/extr_client.c_free_prop_set_req.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.setproperty_request = type { i32, i32 }
%struct.m_option = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @free_prop_set_req to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @free_prop_set_req(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.setproperty_request*, align 8
  %4 = alloca %struct.m_option*, align 8
  store i8* %0, i8** %2, align 8
  %5 = load i8*, i8** %2, align 8
  %6 = bitcast i8* %5 to %struct.setproperty_request*
  store %struct.setproperty_request* %6, %struct.setproperty_request** %3, align 8
  %7 = load %struct.setproperty_request*, %struct.setproperty_request** %3, align 8
  %8 = getelementptr inbounds %struct.setproperty_request, %struct.setproperty_request* %7, i32 0, i32 1
  %9 = load i32, i32* %8, align 4
  %10 = call %struct.m_option* @get_mp_type(i32 %9)
  store %struct.m_option* %10, %struct.m_option** %4, align 8
  %11 = load %struct.m_option*, %struct.m_option** %4, align 8
  %12 = load %struct.setproperty_request*, %struct.setproperty_request** %3, align 8
  %13 = getelementptr inbounds %struct.setproperty_request, %struct.setproperty_request* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @m_option_free(%struct.m_option* %11, i32 %14)
  ret void
}

declare dso_local %struct.m_option* @get_mp_type(i32) #1

declare dso_local i32 @m_option_free(%struct.m_option*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
